<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <GVL Name="GVL_IO" Id="{86dbb402-8ae0-469d-937b-93eb02f87750}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
// Process parameters, variables	
	SetPoint_ServoX           :REAL;      // SetPoint X - axis
	SetPointHeater            :REAL;      // SetPoint Heater
	Output_ServoX             :REAL;      // X-axis Position
	Output_Heater             :REAL;      // Temperature Heater
	Output_Stirrer            :BOOL;      // Mixer / Stirrer 
	TankLevelSensor           :REAL;      // Tanklevel analogue sensor 
	ValveA, ValveB, ValveC    :BOOL;      // Valves
	Stirrer					  :BOOL;	  // activate stirrer
	xPushButton1              :BOOL;      // Used for test purposes 
	xPushButton2              :BOOL;      // Used for test purposes
	StartPr, StopPr           :BOOL;      // Start and Stop Process Buttons
	Level_S1,Level_S2,Level_S3:BOOL;      // Level Sensors (digital sensors)
    xGenCtrl_Error            :BOOL;      // General Error due SERVO or HEATER Control  
	//  
    noise_HeaterSensor        :BOOL;      // Sensor noise simulation on  
	noise_ServoSensor         :BOOL;      // Sensor noise simulation on    
	countBatches			  :INT;    
	batchTime				  :TIME;
	totalTime				  :TIME;
	averageTime			      :TIME;
	END_VAR
	
	
	]]></Declaration>
  </GVL>
</TcPlcObject>